--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: primary_user
+          MYSQL_USER: primary
           MYSQL_PASSWORD: primary_password
         ports:
           - 3306:3306
